monidy pifi config now that we dont have buttons or leds

--- a/files/pifi.conf
+++ b/files/pifi.conf
@@ -18,8 +18,8 @@ client_device: any
 
 # Path to a Linux LED device to use
 # ex: /sys/class/leds/led0
-status_led: /sys/class/leds/pifi_led/
+#status_led: /sys/class/leds/pifi_led/
 
 # Name of a user input device to use
 # ex: "Keyboard 5"
-button_device_name: pifi_button
+#button_device_name: pifi_button
