Add line in default config for raspicam position
Fixes https://github.com/UbiquityRobotics/ubiquity_main/issues/207

--- a/files/robot.yaml
+++ b/files/robot.yaml
@@ -1,3 +1,7 @@
 # Robot Configuration
+
+raspicam: {'position' : 'upward'}
+
 sonars: None
-# sonars: 'pi_sonar_v1' # Un-comment to enable sonars
+# sonars: 'pi_sonar_v1' # Use this to enable sonars
+
